// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get it calls the callback synchronously if the node already exists: simple 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`get it calls the callback synchronously if the node already exists: versioned 1`] = `
Object {
  "uri": "i18n://en-us@edited.txt#1",
  "value": "user edited text",
}
`;

exports[`get it calls the callback synchronously if the node already exists: versionless 1`] = `
Object {
  "uri": "i18n://en-us@edited.txt#1",
  "value": "user edited text",
}
`;

exports[`get it handles auto-versioning 1`] = `
Object {
  "uri": "i18n://en-us@test.txt#1",
  "value": "user edited text",
}
`;

exports[`get it handles error status codes 1`] = `
Object {
  "__input": Object {
    "i18n://en-us@test.txt": "default",
  },
  "__output": "<h1>Server error 500</h1>",
  "message": "djedi-react: 500 <mock.statusText> POST /djedi/nodes/:
Non-success status code: 500",
  "status": 500,
}
`;

exports[`get it handles getting a null response 1`] = `
Object {
  "message": "djedi-react: Expected the API to return an object of nodes, but got: null",
}
`;

exports[`get it handles getting a string as response 1`] = `
Object {
  "message": "djedi-react: Expected the API to return an object of nodes, but got: \\"{\\\\\\"i18n://en-us@test.txt\\\\\\":\\\\\\"test\\\\\\"}\\"",
}
`;

exports[`get it handles invalid JSON 1`] = `
Object {
  "message": "djedi-react: (no response) POST /djedi/nodes/:
Unexpected end of JSON input",
}
`;

exports[`get it handles multiple Content-Type headers, possibly with charset 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`get it handles rejected requests 1`] = `
Object {
  "message": "djedi-react: (no response) POST /djedi/nodes/:
Network error",
}
`;

exports[`get it handles the language option 1`] = `
Object {
  "uri": "i18n://sv-se@test.txt",
  "value": "test",
}
`;

exports[`get it respects options.baseUrl 1`] = `
Array [
  Array [
    "https://example.com/cms/nodes/",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "default",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`get it warns about rejected refresh requests: callback1 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "one",
    },
  ],
]
`;

exports[`get it warns about rejected refresh requests: callback2 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "one",
    },
  ],
]
`;

exports[`get it warns about rejected refresh requests: callback3 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "two",
    },
  ],
]
`;

exports[`get it warns about rejected refresh requests: warning 1`] = `
Array [
  Array [
    "djedi-react: Failed to refresh node",
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": undefined,
    },
    [Error: djedi-react: (no response) POST /djedi/nodes/:
Network error],
  ],
]
`;

exports[`get it warns if passing an unknown language 1`] = `
Array [
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "sv",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "no",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
]
`;

exports[`getBatched it calls the callback synchronously if the node already exists: simple 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`getBatched it calls the callback synchronously if the node already exists: versioned 1`] = `
Object {
  "uri": "i18n://en-us@edited.txt#1",
  "value": "user edited text",
}
`;

exports[`getBatched it calls the callback synchronously if the node already exists: versionless 1`] = `
Object {
  "uri": "i18n://en-us@edited.txt#1",
  "value": "user edited text",
}
`;

exports[`getBatched it handles auto-versioning 1`] = `
Object {
  "uri": "i18n://en-us@test.txt#1",
  "value": "user edited text",
}
`;

exports[`getBatched it handles error status codes 1`] = `
Object {
  "__input": Object {
    "i18n://en-us@test.txt": "default",
  },
  "__output": "<h1>Server error 500</h1>",
  "message": "djedi-react: 500 <mock.statusText> POST /djedi/nodes/:
Non-success status code: 500",
  "status": 500,
}
`;

exports[`getBatched it handles getting a null response 1`] = `
Object {
  "message": "djedi-react: Expected the API to return an object of nodes, but got: null",
}
`;

exports[`getBatched it handles getting a string as response 1`] = `
Object {
  "message": "djedi-react: Expected the API to return an object of nodes, but got: \\"{\\\\\\"i18n://en-us@test.txt\\\\\\":\\\\\\"test\\\\\\"}\\"",
}
`;

exports[`getBatched it handles invalid JSON 1`] = `
Object {
  "message": "djedi-react: (no response) POST /djedi/nodes/:
Unexpected end of JSON input",
}
`;

exports[`getBatched it handles multiple Content-Type headers, possibly with charset 1`] = `
Object {
  "uri": "i18n://en-us@test.txt",
  "value": "test",
}
`;

exports[`getBatched it handles rejected requests 1`] = `
Object {
  "message": "djedi-react: (no response) POST /djedi/nodes/:
Network error",
}
`;

exports[`getBatched it handles the language option 1`] = `
Object {
  "uri": "i18n://sv-se@test.txt",
  "value": "test",
}
`;

exports[`getBatched it respects options.baseUrl 1`] = `
Array [
  Array [
    "https://example.com/cms/nodes/",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": "default",
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`getBatched it warns about rejected refresh requests: callback1 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "one",
    },
  ],
]
`;

exports[`getBatched it warns about rejected refresh requests: callback2 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "one",
    },
  ],
]
`;

exports[`getBatched it warns about rejected refresh requests: callback3 1`] = `
Array [
  Array [
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": "two",
    },
  ],
]
`;

exports[`getBatched it warns about rejected refresh requests: warning 1`] = `
Array [
  Array [
    "djedi-react: Failed to refresh node",
    Object {
      "uri": "i18n://en-us@test.txt",
      "value": undefined,
    },
    [Error: djedi-react: (no response) POST /djedi/nodes/:
Network error],
  ],
]
`;

exports[`getBatched it warns if passing an unknown language 1`] = `
Array [
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "sv",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "no",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
]
`;

exports[`prefetch it handles error status codes 1`] = `
Object {
  "__input": Object {
    "i18n://en-us@test.txt": null,
  },
  "__output": "<h1>Server error 500</h1>",
  "message": "djedi-react: 500 <mock.statusText> POST /djedi/nodes/:
Non-success status code: 500",
  "status": 500,
}
`;

exports[`prefetch it handles getting a null response 1`] = `
Object {
  "message": "djedi-react: Expected the API to return an object of nodes, but got: null",
}
`;

exports[`prefetch it handles getting a string as response 1`] = `
Object {
  "message": "djedi-react: Expected the API to return an object of nodes, but got: \\"{\\\\\\"i18n://en-us@test.txt\\\\\\":\\\\\\"test\\\\\\"}\\"",
}
`;

exports[`prefetch it handles invalid JSON 1`] = `
Object {
  "message": "djedi-react: (no response) POST /djedi/nodes/:
Unexpected end of JSON input",
}
`;

exports[`prefetch it handles multiple Content-Type headers, possibly with charset 1`] = `undefined`;

exports[`prefetch it handles rejected requests 1`] = `
Object {
  "message": "djedi-react: (no response) POST /djedi/nodes/:
Network error",
}
`;

exports[`prefetch it respects options.baseUrl 1`] = `
Array [
  Array [
    "https://example.com/cms/nodes/",
    Object {
      "body": Object {
        "i18n://en-us@test.txt": null,
      },
      "headers": Object {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`prefetch it warns if passing an unknown language 1`] = `
Array [
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "sv",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "no",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
]
`;

exports[`reportRenderedNode and reportRemovedNode it warns if passing an unknown language 1`] = `
Array [
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "sv",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "no",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
]
`;

exports[`reportRenderedNode and reportRemovedNode it warns if passing an unknown language 2`] = `
Array [
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "sv",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
  Array [
    "djedi-react: Ignoring unknown language",
    Object {
      "actual": "no",
      "expected": Array [
        "en",
        "fi",
        "dk",
      ],
      "fallback": "en",
    },
  ],
]
`;
